--- a/src/mrw/templates/mrw/parse_chat.html
+++ b/src/mrw/templates/mrw/parse_chat.html
@@ -181,7 +181,7 @@
         <a class="navbar-brand" href="#"><span class="text-muted">mr.</span>White</a>
         <div class="buttons-container">
             <span id="parseChatBtn" class="me-4"><i class="fas fa-code mx-2"></i> Parse Chat</span>
-            <span id="writeChangesBtn"><i class="fas fa-save mx-2"></i> Write changes to disk</span>
+            <span id="writeChangesBtn"><i class="fas fa-save mx-2"></i> Write selected elements to disk</span>
             <span id="helpBtn" class="me-4 enabled"><i class="fas fa-question-circle mx-2"></i> Help</span>
         </div>
         <a href="https://github.com/weholt/django-mrw" target="_blank" class="github-icon"><i class="fab fa-github fa-2x mx-3"></i></a>
@@ -259,66 +259,8 @@
     document.addEventListener("DOMContentLoaded", function() {
         var editor_html = ace.edit("editor_html");
         editor_html.setTheme("ace/theme/github");
-        editor_html.session.setMode("ace/mode/python");
-        editor_html.setValue(
-`Some random text
-# filename: models.py
-from django.db import models
-
-class Blog(models.Model):
-    title = models.CharField(maxlength=200)
-    content = models.TextField()
-    created_at = models.DateTimeField(auto_now_add=True)
-
-    def __str__(self):
-        return this.title
-# endof
-
-More random text
-# filename: views.py
-from django.shortcuts import render
-from django.views.generic.ListView;
-from .models import Blog;
-
-class BlogListView(ListView):
-    model = Blog;
-    template_name = 'blog_list.html';
-    context_object_name = 'blogs';
-# endof
-
-# filename: urls.py
-from django.urls import path;
-from .views import BlogListView;
-
-urlpatterns = [
-    path('', BlogListView.as_view(), name='blog-list'),
-];
-# endof
-
-# filename: admin.py
-from django.contrib import admin;
-from .models import Blog;
-
-admin.site.register(Blog);
-# endof
-
-# filename: templates/blog_list.html
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Blog List</title>
-</head>
-<body>
-    <h1>Blog List</h1>
-    <ul>
-        {% for blog in blogs %}
-            <li>{{ blog.title }}</li>
-        {% endfor %}
-    </ul>
-</body>
-</html>
-# endof`, -1);
+        editor_html.session.setMode("ace/mode/html");
+        editor_html.setValue("# Paste your chat here");
 
         var parseChatBtn = document.getElementById("parseChatBtn");
         var writeChangesBtn = document.getElementById("writeChangesBtn");
@@ -363,6 +305,10 @@ admin.site.register(Blog);
                 displayResults(data);
                 writeChangesBtn.classList.add("enabled");
                 writeChangesBtn.classList.remove("disabled");
+                // Resize editor after results are displayed
+                setTimeout(function() {
+                    editor_html.resize();
+                }, 0);
             }).catch(error => {
                 console.error('Error:', error);
                 alert(error.message);
@@ -374,6 +320,10 @@ admin.site.register(Blog);
 
             var formData = new FormData(document.getElementById("inputForm"));
             formData.append('editor_content', editor_html.getValue());
+            var selectedCodeBlocks = document.querySelectorAll(".card input[type='checkbox']:checked");
+            selectedCodeBlocks.forEach(function(checkbox) {
+                formData.append('code_blocks', checkbox.nextSibling.textContent);
+            });
 
             fetch("{% url 'mrw:write_changes' %}", {
                 method: 'POST',
@@ -427,8 +377,15 @@ admin.site.register(Blog);
                     card.className = "card";
                     
                     var cardHeader = document.createElement("div");
-                    cardHeader.className = "card-header";
-                    cardHeader.textContent = key;
+                    cardHeader.className = "card-header d-flex align-items-center";
+                    
+                    var checkbox = document.createElement("input");
+                    checkbox.type = "checkbox";
+                    checkbox.checked = true;
+                    checkbox.className = "me-2";
+
+                    var filename = document.createElement("span");
+                    filename.textContent = key;
 
                     var copyIcon = document.createElement("span");
                     copyIcon.className = "copy-icon";
@@ -442,6 +399,9 @@ admin.site.register(Blog);
                             });
                         };
                     })(data[key]);
+
+                    cardHeader.appendChild(checkbox);
+                    cardHeader.appendChild(filename);
                     cardHeader.appendChild(copyIcon);
 
                     var cardBody = document.createElement("div");
